# pidgin-wishmaster

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
misc/: pidgin-wishmaster-0.1.ebuild
src/: Makefile.am  pidgin-tabby.c  pidgin-wishmaster.c
